--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ target/
 .settings/
 *.class
 application.properties
+.env
 
 ### STS ###
 .apt_generated
@@ -21,16 +22,6 @@ application.properties
 *.iws
 *.iml
 *.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
