--- a/compose.yml
+++ b/compose.yml
@@ -3,8 +3,8 @@ services:
     image: postgres:17.5
     environment:
       POSTGRES_DB: movie_recommendation
-      POSTGRES_USER: romanhan
-      POSTGRES_PASSWORD: postpass
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5433:5432"
     volumes:
